--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
     width: 100vw;
-    background-color: red;
+    background-color: #f3e0e2;
     display: grid;
     place-items: center;
     margin: 0;
